--- a/index.Rmd
+++ b/index.Rmd
@@ -1,11 +1,10 @@
 ---
 title: "给研究生的学术建议"
 subtitle: "The Unwritten Rules of Ph.D. Research"
-author: 
-- （英）戈登 · 鲁格【著】
-- （英）玛丽安·彼得【著】
-- 彭万华【译】	
-- 彭凯平【校】
+author:
+- （英）戈登·鲁格 玛丽安·彼得【著】
+- 彭万华【译】 彭凯平【校】
+- 张亮【编】
 date: "英文版发布于2004年，中文版发布于2009年"
 site: "bookdown::bookdown_site"
 output:
@@ -44,7 +43,7 @@ output:
 
 关于如何取得博士学位的书往往最后有一个推荐书目，而这本书没有。这本书提供的是对所有学科的学生都十分有用的经典著作，例如赫夫（Huff）的《统计陷阱》（How to Lie with Statistics）。除了这些经典，不同的学科有着完全不同的核心读物，而且我们认为将不同学科的核心读物整理为一个书目对同学们没有很大帮助。一些作者认为文集十分有用，而且认为这对其他人也很有用，千是在书目中提到。而我们决定不这样做，虽然并非没有疑虑。绝大部分我们推荐的书都是很特别的，学生们可能花时间读过才会弄明白我们推荐这些书［如修昔底德的《伯罗奔尼撒战争史》（History of the Peloponnesian War）]并非开玩笑。
 
-取而代之，我们的做法是在阅读部分引入一些文献检索方法，你可以借助这些方法找到需要的关键文章，希望这样能够尽量节省你的时间和精力。另外，我们还加入了一个可能对你有帮助的术语清单。这些主要是我们在本书中用到的特殊术语，以及在一个或多个学科中使用而还没有在大多数教材中出现的术语，例如＂浏览原始数据" (eyeballing the data) 。
+取而代之，我们的做法是在阅读部分引入一些文献检索方法，你可以借助这些方法找到需要的关键文章，希望这样能够尽量节省你的时间和精力。另外，我们还加入了一个可能对你有帮助的术语清单。这些主要是我们在本书中用到的特殊术语，以及在一个或多个学科中使用而还没有在大多数教材中出现的术语，例如“浏览原始数据”(eyeballing the data) 。
 
 对于本书中的非正式主题，我们也故意使用一种非正式的方式。这并不是我们在其他场合（例如撰写期刊文献时）使用的方式，因此请不要在论文写作中采用。我们也在写作中交替使用了一些词汇的完整缩写形式（例如Ph.D.，在某些特定段落中）和一般简单缩写形式（例如PhD，在文章的主体中）。简单缩写形式对于完成如此大量的书写工作来说更加方便，但是在正式的情况下，你应当体现出你知道正确的写法，并且坚持使用完整缩写形式。
 
