--- a/02.Rmd
+++ b/02.Rmd
@@ -4,7 +4,7 @@
 
 就程序而言，你需要记住有关正义战争论的一些观点。如果你一下子想不起来，那么请记住关键的一条：完全没有希望获胜的战争就没有进行的必要。在你攻读博士学位期间，你能说服学院改变程序的可能性可以说是零，因此你需要做的是与该体制达成一致。第一种方式就是把学院的程序看成是为了今后学术生涯所需的重要技能而进行的有用实践。无论你选择从哪个角度来看待这些程序，制定这些程序的目的则是要以一系列标准来衡量你，而绝不会考虑你对于这些标准能否正好体现你的才能的意见。你需要做的是先了解这些标准然后使你自己真正、完全符合这些标准。
 
-攻读博士学位需经过好几个阶段，每一个阶段都有其程序和不得不跨越的障碍。以下按照倒叙的方式将这些阶段列出来，或许这样做会让你觉得很恼火，因为你可能更倾向千按部就班顺次关注每一阶段，而不是先关注最终结果，但是如果你从最后一步着眼的话整个程序会更有意义。
+攻读博士学位需经过好几个阶段，每一个阶段都有其程序和不得不跨越的障碍。以下按照倒叙的方式将这些阶段列出来，或许这样做会让你觉得很恼火，因为你可能更倾向于按部就班顺次关注每一阶段，而不是先关注最终结果，但是如果你从最后一步着眼的话整个程序会更有意义。
 
 ## 取得博士学位的程序
 
@@ -17,7 +17,7 @@
 * 论文和答辩是整个过程中最为重要的。前面的阶段只要通过就可以了；
 * 整套程序是为了你获得博士学位之后所从事的工作做的准备工作。
 
-第一种观点最为普遍，持这一观点的主要是学校的管理者和担心拿不到学位的学生（可能占博士生的大多数）。因为这样的想法能降低由千目标不高而轻易失败的风险，就像跨栏一样。如果不瞄准更高的目标，那么很容易刚开始就被绊倒。持第二种观点的人较少。其目的性较强。容易使人忽略中间程序。持第三种观点的人最少，但事实上这一观点对千博士学位本身和以后的学术生涯都是最有好处的。
+第一种观点最为普遍，持这一观点的主要是学校的管理者和担心拿不到学位的学生（可能占博士生的大多数）。因为这样的想法能降低由于目标不高而轻易失败的风险，就像跨栏一样。如果不瞄准更高的目标，那么很容易刚开始就被绊倒。持第二种观点的人较少。其目的性较强。容易使人忽略中间程序。持第三种观点的人最少，但事实上这一观点对于博士学位本身和以后的学术生涯都是最有好处的。
 
 这是最后的一个阶段。或许此时你对于这些内容还不是很感兴趣，但是它对你来说的确很有益处。而且这还涉及公平明智地合理分配问题。但是尽管如此，这并非只是一个单独的阶段。在许多学院。你必须先通过其他阶段才能进行答辩。
 
@@ -36,11 +36,11 @@
 
 在进行论文和答辩之前，你要经历一个被称为“升级”的过程，它的全称是“注册升级成为博士生”，有时也被叫做“通过试用期”。这个阶段不论对学术还是行政来说都很重要。
 
-博士生可能认为学院不管他们是否成功取得博士学位，而事实上学院的的确确关心博士生的通过率，因为博士生的通过率太低会给学校带来负面的影响并且会影响学院获得赞助的多少。一种能减少学生在论文和答辩阶段的失败率并且简单有效的方法就是在他们到达这一痛苦棘手的阶段之前使之改变路线——如果他们尚未到达这一阶段的话自然也就不存在失败了。这个阶段被称为升级阶段。这个转折点介千第一学年末和博士学业的中途，到这个时候你已经为学术体制做了很多工作并且基于这些工作学术体制已经对你的能力有了客观公正的了解。（如果你没有足够努力，或者体制尚未对你的能力有一个公正的了解，那么这就意味若你比较笨拙，鉴于你比较笨拙，达不到完成任务的要求，因此你就不得不改变路线了。）在这个转折点，校方会通过正式的决议表明你应该着手博士论文的提交还是应该以另外一条途径获得其他的证书（注意这里并没有出现 “失败”的字眼）。升级是过渡到提交博士论文阶段的必要步骤。
+博士生可能认为学院不管他们是否成功取得博士学位，而事实上学院的的确确关心博士生的通过率，因为博士生的通过率太低会给学校带来负面的影响并且会影响学院获得赞助的多少。一种能减少学生在论文和答辩阶段的失败率并且简单有效的方法就是在他们到达这一痛苦棘手的阶段之前使之改变路线——如果他们尚未到达这一阶段的话自然也就不存在失败了。这个阶段被称为升级阶段。这个转折点介于第一学年末和博士学业的中途，到这个时候你已经为学术体制做了很多工作并且基于这些工作学术体制已经对你的能力有了客观公正的了解。（如果你没有足够努力，或者体制尚未对你的能力有一个公正的了解，那么这就意味若你比较笨拙，鉴于你比较笨拙，达不到完成任务的要求，因此你就不得不改变路线了。）在这个转折点，校方会通过正式的决议表明你应该着手博士论文的提交还是应该以另外一条途径获得其他的证书（注意这里并没有出现 “失败”的字眼）。升级是过渡到提交博士论文阶段的必要步骤。
 
 升级是一个很重要的阶段。一般情况下涉及对你的表现做出一些真实的学术评定。这通常需要你创造两件东西。其一是一份文件，该文件能体现： (1)你做了很多细致的工作； (2)你了解了包括描述和介绍作品在内的相关学术技能。其二是临场的表现，在答辩会或是学院的研讨会上，你能够向大家介绍你的研究成果，演示你准备的文件上的很多东西，这里涉及口头演说的技巧。非常巧合的是。这两者对于论文写作和论文答辩都可被视为是十分有用的训练。这些文件准备工作和口头陈述是为了展示你的能力——不是要求你尽善尽美，也不是要把你的研究计划具体化。
 
-在评定升级之前，一些学生认定读博士并不适合自己。光荣的退出，或是接到可以选择攻读研究硕士 (MPhil）学位的通知，对千学生导师以及学术体制来说都是一种成功。对于所有的人来说。这样的选择比数年的焦虑和失败的经历要令人开心得多。
+在评定升级之前，一些学生认定读博士并不适合自己。光荣的退出，或是接到可以选择攻读研究硕士 (MPhil）学位的通知，对于学生导师以及学术体制来说都是一种成功。对于所有的人来说。这样的选择比数年的焦虑和失败的经历要令人开心得多。
 
 ### 小升级（The lesser transfer）
 
