--- a/02.Rmd
+++ b/02.Rmd
@@ -66,4 +66,4 @@
 
 ## 博士的标准
 
-博士生常常担心他们的研究是否足以获得博士学位口记住大多数大学的博士学位评估的核心标准（原创性和对知识的重要贡献）是十分有用的。很巧的是，绝大多数的期刊和会议的成功稿件常常能够达得“原创性和对知识的重要贡献”的标准。因此，你可以在提交论文之前将你的文章在指定的期刊或讨论会文集上发表，以此来证明你的“重要性”、“独创性”和“对知识的贡献”。本书后边还有很多篇幅会谈及这个话题口你并不是非要有重大的发现才能获得博土学位——你只需要表现你能够很好地进行独立研究。
+博士生常常担心他们的研究是否足以获得博士学位。记住大多数大学的博士学位评估的核心标准（原创性和对知识的重要贡献）是十分有用的。很巧的是，绝大多数的期刊和会议的成功稿件常常能够达得“原创性和对知识的重要贡献”的标准。因此，你可以在提交论文之前将你的文章在指定的期刊或讨论会文集上发表，以此来证明你的“重要性”、“独创性”和“对知识的贡献”。本书后边还有很多篇幅会谈及这个话题。你并不是非要有重大的发现才能获得博土学位——你只需要表现你能够很好地进行独立研究。
