Format booktitle as italic

--- a/01.Rmd
+++ b/01.Rmd
@@ -85,7 +85,7 @@
 
 ## 必需的技能
 
-对《1066和其他》（1066 and All That）一书比较熟悉的读者会欣喜地发现掌握一些技能普遇被认为是件幸运的事情，尤其是如果你掌握的是那些被称为“可迁移性技能”（trnnsferable skills）。不同于其他一些毫无乐趣的职责的是，你可以把这些技能当做有效资产一样写入你的个人简历。你所在学院的培训课程中可能会提到各种各样的技能——可迁移性的、通用的、以项目为基础的、以学科为基础的等其他若干技能。可迁移性的技能在学术体制中尤其受欢迎，因为据说这种技能的使用范围不仅仅局限于学术界，还可以拓展到其他很多领域。这些技能包括写作、公开演说和如何应对偏见等。
+对《1066和其他》（*1066 and All That*）一书比较熟悉的读者会欣喜地发现掌握一些技能普遇被认为是件幸运的事情，尤其是如果你掌握的是那些被称为“可迁移性技能”（transferable skills）。不同于其他一些毫无乐趣的职责的是，你可以把这些技能当做有效资产一样写入你的个人简历。你所在学院的培训课程中可能会提到各种各样的技能——可迁移性的、通用的、以项目为基础的、以学科为基础的等其他若干技能。可迁移性的技能在学术体制中尤其受欢迎，因为据说这种技能的使用范围不仅仅局限于学术界，还可以拓展到其他很多领域。这些技能包括写作、公开演说和如何应对偏见等。
 
 本章接下来的部分中将要谈到的技能也许是你所在的学院培训项目中不会提到的。
 
