--- a/index.Rmd
+++ b/index.Rmd
@@ -40,7 +40,7 @@ output:
 
 在读这本书的时候要充分意识到每个学科都是不一样的。这也是为什么我们经常使用“通常“这个词。简历中个人特质的确切说明会因学科而不同，但是基本的概念通常是相同的。本书的目的是为了帮助你理解这些基本的概念，进而可以找到这些概念在你所处的学科中的表现形式，然后确保你在自己的论文、陈述报告和简历中展现出应有的水平。
 
-关于如何取得博士学位的书往往最后有一个推荐书目，而这本书没有。这本书提供的是对所有学科的学生都十分有用的经典著作，例如赫夫（Huff）的《统计陷阱》（How to Lie with Statistics）。除了这些经典，不同的学科有着完全不同的核心读物，而且我们认为将不同学科的核心读物整理为一个书目对同学们没有很大帮助。一些作者认为文集十分有用，而且认为这对其他人也很有用，千是在书目中提到。而我们决定不这样做，虽然并非没有疑虑。绝大部分我们推荐的书都是很特别的，学生们可能花时间读过才会弄明白我们推荐这些书［如修昔底德的《伯罗奔尼撒战争史》（History of the Peloponnesian War）]并非开玩笑。
+关于如何取得博士学位的书往往最后有一个推荐书目，而这本书没有。这本书提供的是对所有学科的学生都十分有用的经典著作，例如赫夫（Huff）的《统计陷阱》（*How to Lie with Statistics*）。除了这些经典，不同的学科有着完全不同的核心读物，而且我们认为将不同学科的核心读物整理为一个书目对同学们没有很大帮助。一些作者认为文集十分有用，而且认为这对其他人也很有用，千是在书目中提到。而我们决定不这样做，虽然并非没有疑虑。绝大部分我们推荐的书都是很特别的，学生们可能花时间读过才会弄明白我们推荐这些书［如修昔底德的《伯罗奔尼撒战争史》（*History of the Peloponnesian War*）]并非开玩笑。
 
 取而代之，我们的做法是在阅读部分引入一些文献检索方法，你可以借助这些方法找到需要的关键文章，希望这样能够尽量节省你的时间和精力。另外，我们还加入了一个可能对你有帮助的术语清单。这些主要是我们在本书中用到的特殊术语，以及在一个或多个学科中使用而还没有在大多数教材中出现的术语，例如“浏览原始数据”(eyeballing the data) 。
 
