--- a/04.Rmd
+++ b/04.Rmd
@@ -195,7 +195,7 @@
 
 导师与学生的师生关系中最困难的事情莫过于一些“错误”，而不是一些“阴谋”。双方一开始的时候最好相信每个人都在诚心诚意地做事。按照常规，在这种情况下，预防是最好的办法；如果你有很好的工作习惯（例如，比较擅长上网，做好记录，通知其他人你在做什么事情，及时发表内部与外部报告，及时准确地与人交流），这样很多困难就会完全避免。好习惯会使早期诊断更加容易。良好的交流一般能及时解决问题，而不使问题恶化。
 
-对于上述策略，比较常见的案例就是与一位不易接近的导师打交道。你需要与他的秘书搞好关系，或者更具体地说，最好与他的秘书成为朋友。这样通过导师的秘书，你就可以了解到他的日程安排，并确定自己的导师见面会包括在其 H程安排中。去找导师讨论日程安排问题，解释清楚你需要他能够挤出时间指导你的论文。如果你的导师是一位国际专家，你也许不能使其改变日程安排，他也不会因此减少旅行计划，但是你可以想出一些远程交流的方法，这样在导师出差或旅行期间，你仍然可以获取他的指导意见。如果你的导师忙于其他事情，你可以用非正式委员会弥补这个空缺，向他们咨询意见，但同时要向导师汇报你工作的进展状况。
+对于上述策略，比较常见的案例就是与一位不易接近的导师打交道。你需要与他的秘书搞好关系，或者更具体地说，最好与他的秘书成为朋友。这样通过导师的秘书，你就可以了解到他的日程安排，并确定自己的导师见面会包括在其日程安排中。去找导师讨论日程安排问题，解释清楚你需要他能够挤出时间指导你的论文。如果你的导师是一位国际专家，你也许不能使其改变日程安排，他也不会因此减少旅行计划，但是你可以想出一些远程交流的方法，这样在导师出差或旅行期间，你仍然可以获取他的指导意见。如果你的导师忙于其他事情，你可以用非正式委员会弥补这个空缺，向他们咨询意见，但同时要向导师汇报你工作的进展状况。
 
 如果你发现给你分配现在的导师根本就是一个错误，那么你需要清楚地说明到底是哪些低劣品质或者问题已经对你们的师生关系构成致命的威胁，使得你们的关系已经不可挽救，所以你需要换一位导师。你要在做此决定前，找到一位可以替代他的导师，否则你将会毁掉现有的关系，也会破坏你的名声，其他导师很难说不会被这误导。重点是你要找到一位更好的导师，同时不要说你现在导师的坏话。因此你需要为更换导师找到一些积极的理由，比如说研究方向不同，性格不太合适等原因。对于这件事情，你处理得越有策略，越老练世故，就会对你越有利，对其他人也一样有利。
 
