Fix duplicate footnote reference

--- a/03.Rmd
+++ b/03.Rmd
@@ -26,9 +26,9 @@
 
 这个角色通常（但并非总是）被认为是一个行政角色而并非一个研究角色。从事这个职位的人通常是（但并非总是）那些由于疲倦、工作过度、未得到赏识而“早生华发”的人。可以说如果没有这些主要讲师，几乎没有哪个部门可以支撑多久。
 
-### 普通教授（Reader）[^1]
+### 普通教授（Reader）[^rdr_prf]
 
-[^1]: 参见：《什么是世界一流大学》，丁学良著，北京大学出版社，2004年12月版，第52-56页。
+[^rdr_prf]: 参见：《什么是世界一流大学》，丁学良著，北京大学出版社，2004年12月版，第52-56页。
 
 在英国的研究序列中，普通教授的职位通常是向资深教授职位迈进的一个踏脚石。一般情况下，普通教授从这个位置往上爬是很快的，如果他们继续按照自已取得普通教授资格的方式工作的话——在核心学术期刊上发表论文、争取研究经费，并表示出还可能争取到更多经费的迹象。但也有不少人直接绕过这一阶段，因为不少大学赞成把普通教授看作一个试用阶段，而其他一些大学根本不愿意在这个上面多费周折。也有一些大学泛泛地把普通教授职位等同于资深研究员。
 
@@ -36,7 +36,7 @@
 
 通常是在一些非常显赫的历史悠久的大学。资深研究员是一个全职的、终身的研究职位。也是一个令人觊觎、享有相当高声望的职位。尽管其食宿待遇并不一定很好。
 
-### 资深教授 ( Professor）[^1]
+### 资深教授 ( Professor）[^rdr_prf]
 
 资深教授也有许多不同的类型。要理解这一点。我们有必要提到一个头衔、一个职位和一个人三者之间的区别。有些人之所以是资深教授，是因为他们所处的职位给他们提供了一个较高的席位，比如说系主任一职就很有可能伴随着资深教授职位。还有些人之所以是资深教授，是因为他们成功地申请到了一个特殊的席位，一个有自己独立身份的席位，比如迪斯尼考古学席位 (Disney Chair of Archaeology)。其他的一些人之所以成为资深教授，是因为他们是多才多艺全面发展的人（也就是说，他们表现出来的学术潜质已经足以让他们自己给自己一个私人的“教授”头衔）。还有一些人是被其他大学授予荣誉教授的称号，这很有可能是这样的情况：某个人在这个大学是一个主要讲师，但他同时也兼任另外一个大学的荣誉教授。也有一些人是在自己所在的大学被授予资深教授的称谓，但却只是作为普通教授的身份被聘任。还有的是退休的荣誉教授，因为他们有过不少值得称赞的业绩，因而不能被忽略。
 
