--- a/05.Rmd
+++ b/05.Rmd
@@ -106,9 +106,9 @@
 
 以上谈的主要是怎样联系到研究人员，使自己在研究领域得到他们的帮助。除此以外，还有一些人可以在其他方面帮到你，他们可能会被你忽视，所以我们在这里将简短地讨论这些人的作用。
 
-**引路人（Mentor）**[^1]
+**引路人（Mentor）**[^mnt]
 
-[^1]: Mentor也是英国大学里的“导师”，但与主要管学术研究的导师（Supervisor）职责不完全一样。——译者注
+[^mnt]: Mentor也是英国大学里的“导师”，但与主要管学术研究的导师（Supervisor）职责不完全一样。——译者注
 
 引路人是关心你的生活、职业和学术发展的有智慧的人。他教会你那些“潜规则”，让你看到事情的“整体面貌”。理论上，你的导师不应该是你的引路人，但情况并不一定如此。引路人在研究方面比你更有经验，他会告诉你获取成功和取得信息的诀窍，他会向你展示你根本不知道该如何去寻找的东西。如果你还没有意识到寻找某些东西或做某些事的重要性，那么引路人的指点就更加必要了。比如你可能不知道要尽可能早地准备一份有效的简历——你的朋友不一定知道什么样的简历才是有效的，而且这方面的判断有时是与人的直觉相矛盾的。又比如，学生们往往能看到存在于校内的“显性”不合理现象（因为存在而不合理），但却觉察不到“隐性”不合理现象（因为没有存在但应该存在而不合理）。引路人在这些方面都能给出有用的指导和建议。
 
