--- a/01.Rmd
+++ b/01.Rmd
@@ -128,7 +128,7 @@
 +------------------------------------+-------------------------------------------------------+
 | 多做备份（保证其中一份是不在网上的） | 不止一个学生因为忽略了多做备份这一最基本的问题而到头来不得不重新从草稿写起，或者重复实证性研究。  |
 +------------------------------------+-------------------------------------------------------+
-| 至少完整地读完一篇博士论文           | 要思考博士论文的结构、内容、风格和 “它提出了什么论点“，读一些 “通过”了的文章，是一个非常不错的方法。  |
+| 至少完整地读完一篇博士论文           | 要思考博士论文的结构、内容、风格和“它提出了什么论点”，读一些“通过”了的文章，是一个非常不错的方法。  |
 +------------------------------------+-------------------------------------------------------+
 | 只有取得／未取得博士学位两种情况     | 学会适时放弃。                                          |
 +------------------------------------+-------------------------------------------------------+
