Add cross reference to sections

--- a/09.Rmd
+++ b/09.Rmd
@@ -2,7 +2,7 @@
 
 令大多数博士生担心的是他们要写的论文的“工程”之庞大。这很可能是他们这辈子写下的最长的作品。大多数学生因此产生恐惧情绪，这是可以理解的。然而事实上，你一旦学会了把一个大问题分解成若干个小块，这个任务就变得没有你想象得那么可怕了。这一章讨论的正是这方面的技巧。一篇论文包含若干个板块，也就是若干个章节，而每个章节又可以划分为若干部分，也就是若干小节。你将论文分解到这个层次之后，每次就只需完成几页纸篇幅的写作任务，一下子就好办多了。章的主题构成你的写作结构：普遍意义上的结构，以及具体涉及论文写作的结构。
 
-在每一个学科领域里都发展成熟了若干发表作品的类型，每一类都有自己的标准结构。讨论论文类型的第7章以及讨论阅读的第6章都涉及了这一点。你应该了解和熟悉你所在领域发表作品的类型及其结构，在你自己的写作中使用这些标准结构，直到你熟练到脱离这种结构也能游刃有余的地步。
+在每一个学科领域里都发展成熟了若干发表作品的类型，每一类都有自己的标准结构。讨论论文类型的[第7章](#section-7)以及讨论阅读的[第6章](#section-6)都涉及了这一点。你应该了解和熟悉你所在领域发表作品的类型及其结构，在你自己的写作中使用这些标准结构，直到你熟练到脱离这种结构也能游刃有余的地步。
 
 描述实证性工作的论文的一种有用结构是在引言部分提出一系列明确的问题，在结果部分给出相应的表格和数据，在讨论部分展开针对问题和数据的阐释和分析。这种结构能使读者（以及你本人）对你论文的逻辑和目的有一个清晰的认识。举个例子来说，你可以在引言部分提出三个主要问题，在结果部分用三个板块给出针对这三个问题的实验数据，最后在讨论部分分别展开三组讨论。这样的结构可以使问题明确化，也使问题的答案明确化。
 
